external-crates/move/crates/move-compiler/tests/move_2024/typing/macro_arg_by_name_invalid_usage_value.move
module a::m {
    // macro args are call-by-name, not all usages are valid
    macro fun foo<$T>($x: $T) {
        copy $x;
        move $x;
    }

    fun t() {
        foo!(0);
    }
}
